--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,10 @@ aside{
     font-family: sans-serif;
 }
 
+.w-1{
+    width: 1%;
+}
+
 
 
 
@@ -72,5 +76,13 @@ aside{
  @media screen and (min-width: 992px){
     .larghezza-lg{
         width: 20%;
+    }
+
+    .w-lg-25{
+        width: 25%;
+    }
+
+    .w-lg-75{
+        width: 75%;
     }
  }
