--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 }
 
 .form-control{
-    background-color: #e5e5e5;
+    background-color: white;
     padding-left: 3rem;
 }
 
@@ -56,6 +56,35 @@ aside{
     width: 1%;
 }
 
+.white-hover:hover{
+    background-color: rgba(255, 255, 255, 0.2);
+    transition-duration: 1s;
+}
+
+.white-hover{
+    background-color: rgba(255, 255, 255, 0);
+}
+
+.list-hover:hover{
+    background-color: rgba(95, 94, 94, 0.2);
+}
+
+.list-hover{
+    background-color: rgba(95, 94, 94, 0);
+}
+
+.btn.add:hover {
+    background-color: transparent;
+    border-color: transparent;
+}
+
+.btn.add:hover > figure{
+    background-color: white;
+}
+
+.btn.add:hover > figure > img{
+    filter: invert(1);
+}
 
 
 
@@ -66,6 +95,11 @@ aside{
 
 
 
+@media screen and (min-width: 768px){
+    .w-md-50{
+        width: 50%;
+    }
+ }
 
  @media screen and (max-width: 991px){
     .offcanvas.offcanvas-end{
@@ -78,11 +112,31 @@ aside{
         width: 20%;
     }
 
+    .w-lg-20{
+        width: 20%;
+    }
+
     .w-lg-25{
         width: 25%;
     }
 
+    .w-lg-30{
+        width: 30%;
+    }
+
     .w-lg-75{
         width: 75%;
+    }
+
+    .w-lg-50{
+        width: 50%;
+    }
+
+    .w-lg-100{
+        width: 100%;
+    }
+
+    .offcanvas.offcanvas-end{
+        width: 40%;
     }
  }
